--- a/biografia.htm
+++ b/biografia.htm
@@ -1,91 +1,105 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Biografía – 1ª KOMUNION</title>
     <link rel="stylesheet" href="estilos-int.css">
-</head>
-<body>
-    <header class="cabecera">
-        <a href="index.htm" class="logo">
-            <img src="imagenes/texto%20logo1.gif" alt="1ª KOMUNION">
-        </a>
-    </header>
+  </head>
+  <body>
+    <header class="cabecera"> <a href="index.htm" class="logo"> <img
 
+          src="imagenes/texto%20logo1.gif" alt="1ª KOMUNION"> </a> </header>
     <nav class="nav-principal">
-        <ul>
-            <li><a href="inicio.htm">Inicio</a></li>
-            <li><a href="biografia.htm" class="active">Biografía</a></li>
-            <li><a href="discografia.htm">Discografía</a></li>
-            <li><a href="imagenes.htm">Imágenes</a></li>
-            <li><a href="videos.htm">Vídeos</a></li>
-            <li><a href="prensa.htm">Prensa</a></li>
-            <li><a href="mailto:1akomunion@gmail.com">Contacto</a></li>
-            <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
-        </ul>
+      <ul>
+       <li><a href="inicio.htm">Inicio</a></li>
+        <li><a href="biografia.htm" class="active">Biografía</a></li>
+        <li><a href="discografia.htm">Discografía</a></li>
+        <li><a href="imagenes.htm">Imágenes</a></li>
+        <li><a href="videos.htm">Vídeos</a></li>
+        <li><a href="prensa.htm">Prensa</a></li>
+        <li><a href="letras.htm">Letras</a></li>
+        <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
+      </ul>
     </nav>
 
+/* estilos-int.css */
+.nav-principal .active {          /* ya existente */
+    background: #ac40f8;
+    color: #ffea00;
+
     <main class="contenido">
-        <!-- aquí tu texto de biografía -->
-   <main class="contenido">
+      <!-- aquí tu texto de biografía -->
+      <main class="contenido">
         <h1>Biografía</h1>
-
         <img src="imagenes/grupo1a.jpg" alt="Grupo 1ª Komunión" class="bio-img">
-
-        <p>Corría el año 1988 e internet era prácticamente un pensamiento futurista. Me refiero exactamente, que menos el fútbol de 2ª regional y las veladas pugilísticas de Estudio 17 (no te digo na´) todo lo demás en esa época era bastante aburrido en domingo. Menos mal que por encima de todo se encontraba lo que realmente había importado hasta la fecha y que fuese la hora que fuese, te esperaba sin malos rollos y en el mismo estado de siempre. Estoy por supuesto hablando de la <strong>MÚSICA</strong>.</p>
-
-        <p>Por entonces lo más difícil siempre era encontrar a alguien, que al igual que tú, estuviera dispuesto a descargar toda la energía del Universo intentando emular a sus héroes musicales. Solamente había dos posibilidades: 1ª los músicos en dique seco 2ª aquellos que les hervía la sangre por hacer algo que les sacara de la rutina.</p>
-
-        <p>Y una de las casualidades de la vida: delante de ti, sin saberlo, tienes los ingredientes necesarios para cocinar el plato del que hace tiempo que te sabes la receta de memoria.</p>
-
+        <p>Corría el año 1988 e internet era prácticamente un pensamiento
+          futurista. Me refiero exactamente, que menos el fútbol de 2ª regional
+          y las veladas pugilísticas de Estudio 17 (no te digo na´) todo lo
+          demás en esa época era bastante aburrido en domingo. Menos mal que por
+          encima de todo se encontraba lo que realmente había importado hasta la
+          fecha y que fuese la hora que fuese, te esperaba sin malos rollos y en
+          el mismo estado de siempre. Estoy por supuesto hablando de la <strong>MÚSICA</strong>.</p>
+        <p>Por entonces lo más difícil siempre era encontrar a alguien, que al
+          igual que tú, estuviera dispuesto a descargar toda la energía del
+          Universo intentando emular a sus héroes musicales. Solamente había dos
+          posibilidades: 1ª los músicos en dique seco 2ª aquellos que les hervía
+          la sangre por hacer algo que les sacara de la rutina.</p>
+        <p>Y una de las casualidades de la vida: delante de ti, sin saberlo,
+          tienes los ingredientes necesarios para cocinar el plato del que hace
+          tiempo que te sabes la receta de memoria.</p>
         <p class="center big rojo">Había nacido... <strong>1ª Komunión</strong>:</p>
-
         <section class="integrantes">
-            <article class="integrante">
-                <img src="imagenes/Bici.jpg" alt="Antonio Bici Díaz">
-                <p class="nombre">Antonio “Bicicleta” Díaz</p>
-                <p>Voz de voces</p>
-            </article>
-
-            <article class="integrante">
-                <img src="imagenes/PATRI.jpg" alt="Patricio Tomás">
-                <p class="nombre">Patricio Tomás</p>
-                <p>Superior del Monasterio de los guitarristas descalzos</p>
-            </article>
-
-            <article class="integrante">
-                <img src="imagenes/Luis.jpg" alt="Luis Solaz">
-                <p class="nombre">Luis Solaz</p>
-                <p>Superviviente de la Vaquilla del Ángel, bajista y apoyo logístico</p>
-            </article>
-
-            <article class="integrante">
-                <img src="imagenes/MADRI.jpg" alt="Jesús El Madri Gallardo">
-                <p class="nombre">Jesús “El Madri” Gallardo</p>
-                <p>Aburrido compulsivo baterista</p>
-            </article>
+          <article class="integrante"> <img src="imagenes/Bici.jpg" alt="Antonio Bici Díaz">
+            <p class="nombre">Antonio “Bicicleta” Díaz</p>
+            <p>Voz de voces</p>
+          </article>
+          <article class="integrante"> <img src="imagenes/PATRI.jpg" alt="Patricio Tomás">
+            <p class="nombre">Patricio Tomás</p>
+            <p>Superior del Monasterio de los guitarristas descalzos</p>
+          </article>
+          <article class="integrante"> <img src="imagenes/Luis.jpg" alt="Luis Solaz">
+            <p class="nombre">Luis Solaz</p>
+            <p>Superviviente de la Vaquilla del Ángel, bajista y apoyo logístico</p>
+          </article>
+          <article class="integrante"> <img src="imagenes/MADRI.jpg" alt="Jesús El Madri Gallardo">
+            <p class="nombre">Jesús “El Madri” Gallardo</p>
+            <p>Aburrido compulsivo baterista</p>
+          </article>
         </section>
-
-        <p>Y como todo el mundo sabe, este maravilloso y jugoso manjar, duró lo que los comensales tardaron en rebañar el plato. Nada más y nada menos que 4 magníficos años. Por cierto, prolíficos y fructuosos años que “dieron a luz” todos aquellos conciertos (unos 84 más o menos), grabaciones y sesiones de guasa inolvidables tanto para sus miembros como para sus seguidores.</p>
-
-        <p class="center">
-            <img src="imagenes/lapida2.gif" alt="Lápida" class="lapida">
+        <p>Y como todo el mundo sabe, este maravilloso y jugoso manjar, duró lo
+          que los comensales tardaron en rebañar el plato. Nada más y nada menos
+          que 4 magníficos años. Por cierto, prolíficos y fructuosos años que
+          “dieron a luz” todos aquellos conciertos (unos 84 más o menos),
+          grabaciones y sesiones de guasa inolvidables tanto para sus miembros
+          como para sus seguidores.</p>
+        <p class="center"> <img src="imagenes/lapida2.gif" alt="Lápida" class="lapida">
         </p>
+        <p>Peeeerooooo...... pasaron los años, y tras 16 años sin tocar,
+          decidimos resucitar con motivo del 20º aniversario de la formación del
+          grupo.</p>
+        <p>Para conmemorar tal aniversario, reaparecimos actuando en el XIII
+          Bestialc de L'Alcora, el 30 de agosto de 2008. Con sólo unos ensayos
+          (7), y en plan kamikaze, pensamos que para la ocasión debíamos hacer
+          algo que quedase ya plasmado para la posteridad, con lo que gracias a
+          la colaboración de Lalo Cotanda, Juanki y sobre todo al público que
+          una vez más vino a vernos, brindándonos la ocasión de vivir una noche
+          inolvidable con su presencia, pudimos grabar el bolo en vídeo,
+          pensando sobre todo que nuestros hijos el día de mañana puedan tirar
+          las copias a la basura pensando lo pillados que estaban sus padres.</p>
+        <p>Y de esta forma, grabamos y editamos un DVD con la mayor parte de las
+          canciones que perpetramos en ese concierto, entrevistas, algunas
+          fotos...</p>
+        <p>Luego, ya veremos lo que nos deparará el destino, ya que la vida es
+          como es, y no como nosotros queremos que sea.</p>
+        <p class="center rojo">Así que de momento y mientras nos quede un atisbo
+          de ganas de pasarlo bien...</p>
+        <p class="center"> <a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank">
+            <img src="imagenes/foto%20oficial%20[320x200].gif" alt="Foto oficial"
 
-        <p>Peeeerooooo...... pasaron los años, y tras 16 años sin tocar, decidimos resucitar con motivo del 20º aniversario de la formación del grupo.</p>
-
-        <p>Para conmemorar tal aniversario, reaparecimos actuando en el XIII Bestialc de L'Alcora, el 30 de agosto de 2008. Con sólo unos ensayos (7), y en plan kamikaze, pensamos que para la ocasión debíamos hacer algo que quedase ya plasmado para la posteridad, con lo que gracias a la colaboración de Lalo Cotanda, Juanki y sobre todo al público que una vez más vino a vernos, brindándonos la ocasión de vivir una noche inolvidable con su presencia, pudimos grabar el bolo en vídeo, pensando sobre todo que nuestros hijos el día de mañana puedan tirar las copias a la basura pensando lo pillados que estaban sus padres.</p>
-
-        <p>Y de esta forma, grabamos y editamos un DVD con la mayor parte de las canciones que perpetramos en ese concierto, entrevistas, algunas fotos...</p>
-
-        <p>Luego, ya veremos lo que nos deparará el destino, ya que la vida es como es, y no como nosotros queremos que sea.</p>
-
-        <p class="center rojo">Así que de momento y mientras nos quede un atisbo de ganas de pasarlo bien...</p>
-
-        <p class="center">
-            <a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank">
-                <img src="imagenes/foto%20oficial%20[320x200].gif" width="320" height="240" alt="Foto oficial">
-    </main>
-</body>
+              height="240" width="320"> </a></p>
+      </main>
+      <a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank">
+      </a></main>
+  </body>
 </html>
