--- a/discografia.htm
+++ b/discografia.htm
@@ -1,96 +1,134 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Discografía – 1ª KOMUNION</title>
     <link rel="stylesheet" href="estilos-int.css">
-</head>
-<body>
-    <!-- Logo que SIEMPRE vuelve a index.htm -->
-    <header class="cabecera">
-        <a href="index.htm" class="logo">
-            <img src="imagenes/texto%20logo1.gif" alt="1ª KOMUNION">
-        </a>
-    </header>
+  </head>
+  <body> <!-- Logo que SIEMPRE vuelve a index.htm -->
+    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
 
+          alt="1ª KOMUNION"> </a> </header>
     <!-- Menú horizontal entre líneas moradas -->
     <nav class="nav-principal">
-        <ul>
-            <li><a href="inicio.htm">Inicio</a></li>
-            <li><a href="biografia.htm">Biografía</a></li>
-            <li><a href="discografia.htm" class="active">Discografía</a></li>
-            <li><a href="imagenes.htm">Imágenes</a></li>
-            <li><a href="videos.htm">Vídeos</a></li>
-            <li><a href="prensa.htm">Prensa</a></li>
-            <li><a href="mailto:1akomunion@gmail.com">Contacto</a></li>
-            <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
-        </ul>
+      <ul>
+        <li><a href="inicio.htm">Inicio</a></li>
+        <li><a href="biografia.htm">Biografía</a></li>
+        <li><a href="discografia.htm" class="active">Discografía</a></li>
+        <li><a href="imagenes.htm">Imágenes</a></li>
+        <li><a href="videos.htm">Vídeos</a></li>
+        <li><a href="prensa.htm">Prensa</a></li>
+        <li><a href="letras.htm">Letras</a></li>
+        <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
+      </ul>
     </nav>
+
+/* estilos-int.css */
+.nav-principal .active {          /* ya existente */
+    background: #ac40f8;
+    color: #ffea00;
 
     <!-- Contenido de la discografía -->
     <main class="contenido discografia">
-        <h1>Discografía</h1>
+      <h1>Discografía</h1>
+      <section class="disco">
+        <h2>Konfirmación</h2>
+        <a target="_blank" href="imagenes/Caratula_konfirmacion%20[800x600].jpg">
+          <img src="imagenes/Caratula_konfirmacion%20[151].jpg" alt="Carátula Konfirmación">
+        </a> <a target="_blank" href="imagenes/Contraportada_konfirmacion%20[800x600].jpg">
+          <img src="imagenes/Contraportada_konfirmacion%20151.jpg" alt="Contraportada">
+        </a>
+        <p> Cd-Extra grabado a finales de 2011 en Rockaway Studios de Castellón,
+          contando con Alberto Luzendo y Coky Ordóñez como técnicos, y
+          masterizado en La Seta Azul (Benicassim) por Juanki Castillo.<br>
+          Incluye una pista de vídeo autoproducido por nosotros: «Quería el
+          mundo cambiar» como homenaje a Juan Morcillo.<br>
+          El dibujo de la carátula y la galleta del cd son de Carlos Azagra,
+          dibujante de El Jueves.<br>
+          Editado por Lemon Songs (Ref.11CD2110 – D.L. CS-361-2011). </p>
+        <ul>
+          <li>Ajedrez Mortal</li>
+          <li>Niño Anarquista</li>
+          <li>Apestados Unidos</li>
+          <li>Jose Luis</li>
+          <li>El ozono</li>
+          <li>El Monstruo</li>
+          <li>Sólo Órdenes</li>
+          <li>Príncipe Azul</li>
+          <li>Pide Perdón</li>
+          <li>El Racismo</li>
+          <li>Secuestro Legal</li>
+          <li>Apocalipsis I</li>
+          <li><em>Video:</em> Quería el mundo cambiar (J. Morcillo)</li>
+        </ul>
+      </section>
+      <hr>
+      <section class="disco">
+        <h2>Resurrekción</h2>
+        <a target="_blank" href="imagenes/dvd600.jpg"> <img src="imagenes/dvd150.jpg"
 
-        <section class="disco">
-            <h2>Konfirmación</h2>
-            <a target="_blank" href="imagenes/Caratula_konfirmacion%20[800x600].jpg">
-                <img src="imagenes/Caratula_konfirmacion%20[151].jpg" alt="Carátula Konfirmación">
-            </a>
-            <a target="_blank" href="imagenes/Contraportada_konfirmacion%20[800x600].jpg">
-                <img src="imagenes/Contraportada_konfirmacion%20151.jpg" alt="Contraportada">
-            </a>
-            <p>
-                Cd-Extra grabado a finales de 2011 en Rockaway Studios de Castellón, contando con Alberto Luzendo y Coky Ordóñez como técnicos, y masterizado en La Seta Azul (Benicassim) por Juanki Castillo.<br>
-                Incluye una pista de vídeo autoproducido por nosotros: «Quería el mundo cambiar» como homenaje a Juan Morcillo.<br>
-                El dibujo de la carátula y la galleta del cd son de Carlos Azagra, dibujante de El Jueves.<br>
-                Editado por Lemon Songs (Ref.11CD2110 – D.L. CS-361-2011).
-            </p>
-            <ul>
-                <li>Ajedrez Mortal</li><li>Niño Anarquista</li><li>Apestados Unidos</li><li>Jose Luis</li><li>El ozono</li><li>El Monstruo</li><li>Sólo Órdenes</li><li>Príncipe Azul</li><li>Pide Perdón</li><li>El Racismo</li><li>Secuestro Legal</li><li>Apocalipsis I</li>
-                <li><em>Video:</em> Quería el mundo cambiar (J. Morcillo)</li>
-            </ul>
-        </section>
+            alt="DVD Resurrección"> </a>
+        <p> Dvd grabado el 30 de agosto de 2008 durante el XIII Bestialc en
+          L'Alcora.<br>
+          Tras 16 años sin tocar, y como motivo del 20º aniversario del grupo,
+          decidimos ensayar y participar en el festival.<br>
+          Con la colaboración de Gonzalo Cotanda (vídeo) y Juanki (audio),
+          editamos este dvd por Lemonsongs (09DVD2081 – D.L. CS-233-2009).<br>
+          23 temas, entrevistas, fotos… Casi hora y media. </p>
+        <ul>
+          <li>Tu trozo de libertad</li>
+          <li>Hambre</li>
+          <li>Ser alcalde...</li>
+          <li>Hombre salvaje</li>
+          <li>Príncipe azul</li>
+          <li>Suena la sirena</li>
+          <li>Si fuera Dios</li>
+          <li>Malditos concursos</li>
+          <li>José Luis</li>
+          <li>Franciskillo</li>
+          <li>Goodway Paco</li>
+          <li>No puede ser</li>
+          <li>Barrios bajos</li>
+          <li>Apocalipsis II</li>
+          <li>Nada sabrás</li>
+          <li>El mangui</li>
+          <li>Huelga de hambre</li>
+          <li>Plátanos</li>
+          <li>El puto sabor</li>
+          <li>Úlcera</li>
+          <li>Mierda y sangre</li>
+          <li>Hola... Y adiós</li>
+          <li>Soldadito español</li>
+        </ul>
+      </section>
+      <hr>
+      <section class="disco">
+        <h2>1ª Komunión (LP)</h2>
+        <a target="_blank" href="imagenes/1komunion1.jpg"> <img src="imagenes/_1_komunion1.jpg"
 
-        <hr>
-
-        <section class="disco">
-            <h2>Resurrekción</h2>
-            <a target="_blank" href="imagenes/dvd600.jpg">
-                <img src="imagenes/dvd150.jpg" alt="DVD Resurrección">
-            </a>
-            <p>
-                Dvd grabado el 30 de agosto de 2008 durante el XIII Bestialc en L'Alcora.<br>
-                Tras 16 años sin tocar, y como motivo del 20º aniversario del grupo, decidimos ensayar y participar en el festival.<br>
-                Con la colaboración de Gonzalo Cotanda (vídeo) y Juanki (audio), editamos este dvd por Lemonsongs (09DVD2081 – D.L. CS-233-2009).<br>
-                23 temas, entrevistas, fotos… Casi hora y media.
-            </p>
-            <ul>
-                <li>Tu trozo de libertad</li><li>Hambre</li><li>Ser alcalde...</li><li>Hombre salvaje</li><li>Príncipe azul</li><li>Suena la sirena</li><li>Si fuera Dios</li><li>Malditos concursos</li><li>José Luis</li><li>Franciskillo</li><li>Goodway Paco</li><li>No puede ser</li><li>Barrios bajos</li><li>Apocalipsis II</li><li>Nada sabrás</li><li>El mangui</li><li>Huelga de hambre</li><li>Plátanos</li><li>El puto sabor</li><li>Úlcera</li><li>Mierda y sangre</li><li>Hola... Y adiós</li><li>Soldadito español</li>
-            </ul>
-        </section>
-
-        <hr>
-
-        <section class="disco">
-            <h2>1ª Komunión (LP)</h2>
-            <a target="_blank" href="imagenes/1komunion1.jpg">
-                <img src="imagenes/_1_komunion1.jpg" alt="Portada LP">
-            </a>
-            <a target="_blank" href="imagenes/1komunion2.jpg">
-                <img src="imagenes/_1_komunion2.jpg" alt="Contraportada LP">
-            </a>
-            <p>
-                Grabado en marzo de 1991 en «Polka», estudio de Alejandro Cardá (Vila-real), con una Tascam de 4 pistas.<br>
-                Masterizado y editado en vinilo por Munster Records (EUKZ 002 – D.L. M-22217-91).<br>
-                Diseño y montaje casero.
-            </p>
-            <ul>
-                <li>Tu trozo de libertad</li><li>Inseguridad social</li><li>Hambre</li><li>Ser alcalde...</li><li>Consumir</li><li>Que se voten ellos</li><li>Hombre salvaje</li><li>El mangui</li><li>No puede ser</li><li>Franciskillo</li><li>Goodway Paco</li>
-            </ul>
-        </section>
-
-        <!-- (Puedes seguir añadiendo más secciones igual: Tour 89, Circuito Rock, etc.) -->
+            alt="Portada LP"> </a> <a target="_blank" href="imagenes/1komunion2.jpg">
+          <img src="imagenes/_1_komunion2.jpg" alt="Contraportada LP"> </a>
+        <p> Grabado en marzo de 1991 en «Polka», estudio de Alejandro Cardá
+          (Vila-real), con una Tascam de 4 pistas.<br>
+          Masterizado y editado en vinilo por Munster Records (EUKZ 002 – D.L.
+          M-22217-91).<br>
+          Diseño y montaje casero. </p>
+        <ul>
+          <li>Tu trozo de libertad</li>
+          <li>Inseguridad social</li>
+          <li>Hambre</li>
+          <li>Ser alcalde...</li>
+          <li>Consumir</li>
+          <li>Que se voten ellos</li>
+          <li>Hombre salvaje</li>
+          <li>El mangui</li>
+          <li>No puede ser</li>
+          <li>Franciskillo</li>
+          <li>Goodway Paco</li>
+        </ul>
+      </section>
+      <!-- (Puedes seguir añadiendo más secciones igual: Tour 89, Circuito Rock, etc.) -->
     </main>
-</body>
+  </body>
 </html>
