--- a/index.htm
+++ b/index.htm
@@ -69,8 +69,7 @@
   <body>
     <header class="cabecera"> <a href="index.htm" class="logo"> </a><br>
       <a href="index.htm" class="logo"><img src="imagenes/texto%20logo1.gif" alt="1ª KOMUNION"></a><br>
-      <br>
-      <a href="index.htm" class="logo"> </a> <a href="inicio.htm" class="entrar-btn">ENTRAR</a><br>
+      <a href="inicio.htm" class="entrar-btn">ENTRAR</a><br>
       <br>
       <br>
       <br>
