--- a/videos.htm
+++ b/videos.htm
@@ -1,39 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Vídeos – 1ª KOMUNION</title>
     <link rel="stylesheet" href="estilos-int.css">
-</head>
-<body>
-    <header class="cabecera">
-        <a href="index.htm" class="logo">
-            <img src="imagenes/texto%20logo1.gif" alt="1ª KOMUNION">
-        </a>
-    </header>
-
+  </head>
+  <body>
+    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
+          alt="1ª KOMUNION"> </a> </header>
     <nav class="nav-principal">
-        <ul>
-            <li><a href="inicio.htm">Inicio</a></li>
-            <li><a href="biografia.htm">Biografía</a></li>
-            <li><a href="discografia.htm">Discografía</a></li>
-            <li><a href="imagenes.htm">Imágenes</a></li>
-            <li><a href="videos.htm" class="active">Vídeos</a></li>
-            <li><a href="prensa.htm">Prensa</a></li>
-            <li><a href="mailto:1akomunion@gmail.com">Contacto</a></li>
-            <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
-        </ul>
+      <ul>
+        <li><a href="inicio.htm">Inicio</a></li>
+        <li><a href="biografia.htm">Biografía</a></li>
+        <li><a href="discografia.htm">Discografía</a></li>
+        <li><a href="imagenes.htm">Imágenes</a></li>
+        <li><a href="videos.htm" class="active">Vídeos</a></li>
+        <li><a href="prensa.htm">Prensa</a></li>
+        <li><a href="letras.htm">Letras</a></li>
+        <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
+      </ul>
     </nav>
 
+/* estilos-int.css */
+.nav-principal .active {          /* ya existente */
+    background: #ac40f8;
+    color: #ffea00;
+
     <main class="contenido">
-        <div class="video-wrapper">
-            <iframe width="640" height="360"
-                    src="https://www.youtube.com/embed/videoseries?list=PL994A556DBE59DD23&hl=es_ES"
-                    frameborder="0"
-                    allowfullscreen>
-            </iframe>
-        </div>
+      <div class="video-wrapper"> <iframe src="https://www.youtube.com/embed/videoseries?list=PL994A556DBE59DD23&amp;hl=es_ES"
+          allowfullscreen="" height="360" frameborder="0" width="640"> </iframe>
+      </div>
     </main>
-</body>
+  </body>
 </html>
