--- a/imagenes.htm
+++ b/imagenes.htm
@@ -1,98 +1,88 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Imágenes – 1ª KOMUNION</title>
     <link rel="stylesheet" href="estilos-int.css">
-</head>
-<body>
-    <!-- Logo que SIEMPRE vuelve a index.htm -->
-    <header class="cabecera">
-        <a href="index.htm" class="logo">
-            <img src="imagenes/texto%20logo1.gif" alt="1ª KOMUNION">
-        </a>
-    </header>
+  </head>
+  <body> <!-- Logo que SIEMPRE vuelve a index.htm -->
+    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
 
+          alt="1ª KOMUNION"> </a> </header>
     <!-- Menú horizontal entre líneas moradas -->
     <nav class="nav-principal">
-        <ul>
-            <li><a href="inicio.htm">Inicio</a></li>
-            <li><a href="biografia.htm">Biografía</a></li>
-            <li><a href="discografia.htm">Discografía</a></li>
-            <li><a href="imagenes.htm" class="active">Imágenes</a></li>
-            <li><a href="videos.htm">Vídeos</a></li>
-            <li><a href="prensa.htm">Prensa</a></li>
-            <li><a href="mailto:1akomunion@gmail.com">Contacto</a></li>
-            <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
-        </ul>
+      <ul>
+        <li><a href="inicio.htm">Inicio</a></li>
+        <li><a href="biografia.htm">Biografía</a></li>
+        <li><a href="discografia.htm">Discografía</a></li>
+        <li><a href="imagenes.htm" class="active">Imágenes</a></li>
+        <li><a href="videos.htm">Vídeos</a></li>
+        <li><a href="prensa.htm">Prensa</a></li>
+        <li><a href="letras.htm">Letras</a></li>
+        <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
+      </ul>
     </nav>
+
+/* estilos-int.css */
+.nav-principal .active {          /* ya existente */
+    background: #ac40f8;
+    color: #ffea00;
 
     <!-- Galería de imágenes -->
     <main class="contenido galeria">
-        <h1>Galería de fotos</h1>
+      <h1>Galería de fotos</h1>
+      <!-- 1988-1992 -->
+      <section class="galeria-grupo">
+        <h2>1988 - 1992</h2>
+        <div class="grid-fotos"> <a href="imagenes/1komunion1.jpg"> <img src="imagenes/_1_komunion1.jpg"
 
-        <!-- 1988-1992 -->
-        <section class="galeria-grupo">
-            <h2>1988 - 1992</h2>
-            <div class="grid-fotos">
-                <a href="imagenes/1komunion1.jpg">
-                    <img src="imagenes/_1_komunion1.jpg" alt="1ª Komunión LP"></a>
-                <a href="imagenes/1komunion2.jpg">
-                    <img src="imagenes/_1_komunion2.jpg" alt="Contraportada LP"></a>
-                <a href="imagenes/Caratula_konfirmacion%20[800x600].jpg">
-                    <img src="imagenes/Caratula_konfirmacion%20[151].jpg" alt="Konfirmación"></a>
-                <a href="imagenes/Contraportada_konfirmacion%20[800x600].jpg">
-                    <img src="imagenes/Contraportada_konfirmacion%20151.jpg" alt="Contraportada Konfirmación"></a>
-                <a href="imagenes/dvd600.jpg">
-                    <img src="imagenes/dvd150.jpg" alt="DVD Resurrección"></a>
-                <a href="imagenes/maqueta2.jpg">
-                    <img src="imagenes/_maqueta2.jpg" alt="Maqueta Tour 89"></a>
-                <a href="imagenes/singleivaj1.jpg">
-                    <img src="imagenes/_single_ivaj1.jpg" alt="Single IVAJ"></a>
-                <a href="imagenes/singleivaj2.jpg">
-                    <img src="imagenes/_single_ivaj2.jpg" alt="Contraportada Single"></a>
-            </div>
-        </section>
+              alt="1ª Komunión LP"></a> <a href="imagenes/1komunion2.jpg"> <img
 
-        <!-- XIII BESTIALC -->
-        <section class="galeria-grupo">
-            <h2>XIII BESTIALC 2008</h2>
-            <div class="grid-fotos">
-                <a href="imagenes/bestialc1.jpg">
-                    <img src="imagenes/_bestialc1.jpg" alt="Bestialc 1"></a>
-                <a href="imagenes/bestialc2.jpg">
-                    <img src="imagenes/_bestialc2.jpg" alt="Bestialc 2"></a>
-                <a href="imagenes/bestialc3.jpg">
-                    <img src="imagenes/_bestialc3.jpg" alt="Bestialc 3"></a>
-            </div>
-        </section>
+              src="imagenes/_1_komunion2.jpg" alt="Contraportada LP"></a> <a href="imagenes/Caratula_konfirmacion%20[800x600].jpg">
+            <img src="imagenes/Caratula_konfirmacion%20[151].jpg" alt="Konfirmación"></a>
+          <a href="imagenes/Contraportada_konfirmacion%20[800x600].jpg"> <img src="imagenes/Contraportada_konfirmacion%20151.jpg"
 
-        <!-- Pub D'Leyend -->
-        <section class="galeria-grupo">
-            <h2>Pub D'Leyend</h2>
-            <div class="grid-fotos">
-                <a href="imagenes/dlegend1.jpg">
-                    <img src="imagenes/_dlegend1.jpg" alt="D'Leyend 1"></a>
-                <a href="imagenes/dlegend2.jpg">
-                    <img src="imagenes/_dlegend2.jpg" alt="D'Leyend 2"></a>
-                <a href="imagenes/dlegend3.jpg">
-                    <img src="imagenes/_dlegend3.jpg" alt="D'Leyend 3"></a>
-            </div>
-        </section>
+              alt="Contraportada Konfirmación"></a> <a href="imagenes/dvd600.jpg">
+            <img src="imagenes/dvd150.jpg" alt="DVD Resurrección"></a> <a href="imagenes/maqueta2.jpg">
+            <img src="imagenes/_maqueta2.jpg" alt="Maqueta Tour 89"></a> <a href="imagenes/singleivaj1.jpg">
+            <img src="imagenes/_single_ivaj1.jpg" alt="Single IVAJ"></a> <a href="imagenes/singleivaj2.jpg">
+            <img src="imagenes/_single_ivaj2.jpg" alt="Contraportada Single"></a>
+        </div>
+      </section>
+      <!-- XIII BESTIALC -->
+      <section class="galeria-grupo">
+        <h2>XIII BESTIALC 2008</h2>
+        <div class="grid-fotos"> <a href="imagenes/bestialc1.jpg"> <img src="imagenes/_bestialc1.jpg"
 
-        <!-- II ViveRock 2011 -->
-        <section class="galeria-grupo">
-            <h2>II ViveRock 2011</h2>
-            <div class="grid-fotos">
-                <a href="imagenes/viverock1.jpg">
-                    <img src="imagenes/_viverock1.jpg" alt="ViveRock 1"></a>
-                <a href="imagenes/viverock2.jpg">
-                    <img src="imagenes/_viverock2.jpg" alt="ViveRock 2"></a>
-                <a href="imagenes/viverock3.jpg">
-                    <img src="imagenes/_viverock3.jpg" alt="ViveRock 3"></a>
-            </div>
-        </section>
+              alt="Bestialc 1"></a> <a href="imagenes/bestialc2.jpg"> <img src="imagenes/_bestialc2.jpg"
+
+              alt="Bestialc 2"></a> <a href="imagenes/bestialc3.jpg"> <img src="imagenes/_bestialc3.jpg"
+
+              alt="Bestialc 3"></a> </div>
+      </section>
+      <!-- Pub D'Leyend -->
+      <section class="galeria-grupo">
+        <h2>Pub D'Leyend</h2>
+        <div class="grid-fotos"> <a href="imagenes/dlegend1.jpg"> <img src="imagenes/_dlegend1.jpg"
+
+              alt="D'Leyend 1"></a> <a href="imagenes/dlegend2.jpg"> <img src="imagenes/_dlegend2.jpg"
+
+              alt="D'Leyend 2"></a> <a href="imagenes/dlegend3.jpg"> <img src="imagenes/_dlegend3.jpg"
+
+              alt="D'Leyend 3"></a> </div>
+      </section>
+      <!-- II ViveRock 2011 -->
+      <section class="galeria-grupo">
+        <h2>II ViveRock 2011</h2>
+        <div class="grid-fotos"> <a href="imagenes/viverock1.jpg"> <img src="imagenes/_viverock1.jpg"
+
+              alt="ViveRock 1"></a> <a href="imagenes/viverock2.jpg"> <img src="imagenes/_viverock2.jpg"
+
+              alt="ViveRock 2"></a> <a href="imagenes/viverock3.jpg"> <img src="imagenes/_viverock3.jpg"
+
+              alt="ViveRock 3"></a> </div>
+      </section>
     </main>
-</body>
+  </body>
 </html>
