--- a/inicio.htm
+++ b/inicio.htm
@@ -1,12 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Inicio – 1ª KOMUNION</title>
     <link rel="stylesheet" href="estilos-int.css">
-
- <!-- Fondo exclusivo para inicio.htm -->
+    <!-- Fondo exclusivo para inicio.htm -->
     <style>
         html, body {
             height: 100%;
@@ -21,27 +20,23 @@
             padding-top: 3vh;
         }
     </style>
-</head>
-<body>
-    <header class="cabecera">
-        <a href="index.htm" class="logo">
-            <img src="imagenes/texto%20logo1.gif" alt="1ª KOMUNION">
-        </a>
-    </header>
+  </head>
+  <body>
+    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
 
+          alt="1ª KOMUNION"> </a> </header>
     <nav class="nav-principal">
-        <ul>
-            <li><a href="inicio.htm" class="active">Inicio</a></li>
-            <li><a href="biografia.htm">Biografía</a></li>
-            <li><a href="discografia.htm">Discografía</a></li>
-            <li><a href="imagenes.htm">Imágenes</a></li>
-            <li><a href="videos.htm">Vídeos</a></li>
-            <li><a href="prensa.htm">Prensa</a></li>
-            <li><a href="mailto:1akomunion@gmail.com">Contacto</a></li>
-            <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
-        </ul>
+      <ul>
+        <li><a href="inicio.htm" class="active">Inicio</a></li>
+        <li><a href="biografia.htm">Biografía</a></li>
+        <li><a href="discografia.htm">Discografía</a></li>
+        <li><a href="imagenes.htm">Imágenes</a></li>
+        <li><a href="videos.htm">Vídeos</a></li>
+        <li><a href="prensa.htm">Prensa</a></li>
+        <li><a href="letras.htm">Letras</a></li>
+        <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
+      </ul>
     </nav>
-
     <main class="contenido"><!-- vacío --></main>
-</body>
+  </body>
 </html>
