--- a/letras.htm
+++ b/letras.htm
@@ -1,84 +1,58 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Audio - Letras – 1ª KOMUNION</title>
     <link rel="stylesheet" href="estilos-int.css">
-</head>
-<body>
+  </head>
+  <body>
     <!-- Logo que SIEMPRE vuelve a index.htm -->
-    <header class="cabecera">
-        <a href="index.htm" class="logo">
-            <img src="imagenes/texto%20logo1.gif" alt="1ª KOMUNION">
-        </a>
-    </header>
-
+    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
+          alt="1ª KOMUNION"> </a> </header>
     <!-- Menú horizontal entre líneas moradas -->
     <nav class="nav-principal">
-        <ul>
-            <li><a href="inicio.htm">Inicio</a></li>
-            <li><a href="biografia.htm">Biografía</a></li>
-            <li><a href="discografia.htm">Discografía</a></li>
-            <li><a href="imagenes.htm">Imágenes</a></li>
-            <li><a href="videos.htm">Vídeos</a></li>
-            <li><a href="letras.htm" class="active">Letras</a></li>
-            <li><a href="mailto:1akomunion@gmail.com">Contacto</a></li>
-            <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
-        </ul>
+      <ul>
+        <li><a href="inicio.htm">Inicio</a></li>
+        <li><a href="biografia.htm">Biografía</a></li>
+        <li><a href="discografia.htm">Discografía</a></li>
+        <li><a href="imagenes.htm">Imágenes</a></li>
+        <li><a href="videos.htm">Vídeos</a></li>
+        <li><a href="prensa.htm">Prensa</a></li>
+        <li><a href="letras.htm" class="active">Letras</a></li>
+        <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
+      </ul>
     </nav>
-
-    <!-- Contenido de letras -->
     <main class="contenido letras">
-        <h1>Letras de nuestras canciones</h1>
-
-        <div class="indice-letras">
-            <a href="#Primera_Komunion">Primera Komunión</a>
-            <a href="#Iran_Iraq">Irán – Iraq</a>
-            <a href="#Soldadito_Espanol">Soldadito Español</a>
-            <a href="#Si_fuera_Dios">Si fuera Dios</a>
-            <a href="#Platanos">Plátanos…</a>
-            <a href="#Suena_la_sirena">Suena la sirena</a>
-            <a href="#Mierda_y_sangre">Mierda y sangre</a>
-            <a href="#En_el_culo">En el culo</a>
-            <a href="#Ulcera">Úlcera</a>
-            <a href="#Tu_trozo_de_libertad">Tu trozo de libertad</a>
-            <a href="#Inseguridad_Social">Inseguridad Social</a>
-            <a href="#Hambre">Hambre</a>
-            <a href="#Ser_alcalde">Ser alcalde…</a>
-            <a href="#Consumir">Consumir</a>
-            <a href="#Que_se_voten_ellos">Que se voten ellos</a>
-            <a href="#Hombre_Salvaje">Hombre Salvaje</a>
-            <a href="#No_puede_ser">No puede ser</a>
-            <a href="#Francisquillo">Francisquillo</a>
-            <a href="#Goodway_Paco">Goodway Paco</a>
-            <a href="#Nada_sabras">Nada sabrás</a>
-            <a href="#Apestados_Unidos">Apestados Unidos</a>
-            <a href="#El_Racismo">El Racismo</a>
-            <a href="#Ajedrez_mortal">Ajedrez mortal</a>
-            <a href="#Barrios_bajos">Barrios bajos</a>
-            <a href="#Apocalipsis_II">Apocalipsis II</a>
-            <a href="#Malditos_concursos">Malditos concursos</a>
-            <a href="#La_fiesta">La fiesta</a>
-            <a href="#Huelga_de_hambre">Huelga de hambre</a>
-            <a href="#Apocalipsis_I">Apocalipsis I</a>
-            <a href="#Principe_Azul">Príncipe Azul</a>
-            <a href="#Pide_perdon">Pide perdón</a>
-            <a href="#Solo_ordenes">Sólo órdenes</a>
-            <a href="#El_ozono">El ozono</a>
-            <a href="#Jose_Luis">José Luis</a>
-            <a href="#El_monstruo">El monstruo</a>
-            <a href="#Intro">Intro</a>
-            <a href="#Nino_Anarquista">Niño Anarquista</a>
-            <a href="#Secuestro_legal">Secuestro legal</a>
-            <a href="#No_puedes_mas">No puedes más</a>
-            <a href="#El_Nani">El Nani</a>
-        </div>
-
-        <!-- ====== CANCIONES ====== -->
-        <section class="cancion">
-            <h2 id="Primera_Komunion">Primera Komunión</h2>
-            <p class="letra">
+      <div class="indice-letras"> <a href="#Primera_Komunion">Primera Komunión</a>
+        <a href="#Iran_Iraq">Irán – Iraq</a> <a href="#Soldadito_Espanol">Soldadito
+          Español</a> <a href="#Si_fuera_Dios">Si fuera Dios</a> <a href="#Platanos">Plátanos…</a>
+        <a href="#Suena_la_sirena">Suena la sirena</a> <a href="#Mierda_y_sangre">Mierda
+          y sangre</a> <a href="#En_el_culo">En el culo</a> <a href="#Ulcera">Úlcera</a>
+        <a href="#Tu_trozo_de_libertad">Tu trozo de libertad</a> <a href="#Inseguridad_Social">Inseguridad
+          Social</a> <a href="#Hambre">Hambre</a> <a href="#Ser_alcalde">Ser
+          alcalde…</a> <a href="#Consumir">Consumir</a> <a href="#Que_se_voten_ellos">Que
+          se voten ellos</a> <a href="#Hombre_Salvaje">Hombre Salvaje</a> <a href="#No_puede_ser">No
+          puede ser</a> <a href="#Francisquillo">Francisquillo</a> <a href="#Goodway_Paco">Goodway
+          Paco</a> <a href="#Nada_sabras">Nada sabrás</a> <span style="color: yellow;"></span>
+        <a href="#Ajedrez_mortal">Ajedrez mortal</a><a href="#Nino_Anarquista">Niño
+          Anarquista</a><a href="#Apestados_Unidos">Apestados Unidos</a> <a href="#Jose_Luis">José
+          Luis</a><a href="#El_ozono">El ozono</a>&nbsp; <a href="#El_monstruo">El
+          monstruo</a><a href="#Solo_ordenes">Sólo órdenes</a><a href="#Principe_Azul">Príncipe
+          Azul</a> <a href="#Pide_perdon">Pide perdón</a><a href="#El_Racismo">El
+          Racismo</a> <a href="#Secuestro_legal">Secuestro legal</a><a href="#Apocalipsis_I">Apocalipsis
+          I</a><a href="#Barrios_bajos">Barrios bajos</a> <a href="#Apocalipsis_II">Apocalipsis
+          II</a> <a href="#Malditos_concursos">Malditos concursos</a> <a href="#La_fiesta">La
+          fiesta</a> <a href="#Huelga_de_hambre">Huelga de hambre</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="#Intro">Intro</a>&nbsp;&nbsp; <a href="#No_puedes_mas">No
+          puedes más</a> <a href="#El_Nani">El Nani</a> </div>
+      <!-- ====== CANCIONES ====== -->
+      <section class="cancion">
+        <h2 id="Primera_Komunion">Primera Komunión</h2>
+        <!-- REPRODUCTOR --> <audio controls="controls" preload="none"> <source
+            src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
+          navegador no soporta audio HTML5. </audio>
+        <p class="letra">
                 Yo tenía 9 años,<br>
                 y como no, iba a un colegio de Hermanos.<br>
                 Me enseñaron todos los pecados capitales,<br>
@@ -91,15 +65,13 @@
                 (Abre el bolsillo y cierra la boca)<br>
                 &nbsp;&nbsp;&nbsp;Por un sucio sacramento
             </p>
-            <p class="volver"><a href="#inicio">Volver arriba</a></p>
-        </section>
-
-        <!-- (Aquí irían el resto de canciones igual: <section class="cancion">…</section>) -->
-
-        <!-- EJEMPLO: Irán – Iraq -->
-        <section class="cancion">
-            <h2 id="Iran_Iraq">Irán – Iraq</h2>
-            <p class="letra">
+        <p class="volver"><a href="#inicio">Volver arriba</a></p>
+      </section>
+      <!-- (Aquí irían el resto de canciones igual: <section class="cancion">…</section>) -->
+      <!-- EJEMPLO: Irán – Iraq -->
+      <section class="cancion">
+        <h2 id="Iran_Iraq">Irán – Iraq</h2>
+        <p class="letra">
                 Irán, Iraq. Irán, Iraq. Irán, Iraq… Petróleo.<br>
                 Irán, Iraq. Irán, Iraq. Irán, Iraq… Agobio.<br>
                 Irán, Iraq. Irán, Iraq. Irán, Iraq… Religión.<br>
@@ -108,11 +80,9 @@
                 Irán, Iraq. Irán, Iraq. Irán, Iraq… Almas.<br>
                 (Yeah… Penyagolosa)
             </p>
-            <p class="volver"><a href="#inicio">Volver arriba</a></p>
-        </section>
-
-        <!-- Puedes copiar/pegar el bloque <section> tantas veces como necesites
-             y cambiar el id, el título y la letra. -->
-    </main>
-</body>
+        <p class="volver"><a href="#inicio">Volver arriba</a></p>
+      </section>
+      <!-- Puedes copiar/pegar el bloque <section> tantas veces como necesites
+             y cambiar el id, el título y la letra. --> </main>
+  </body>
 </html>
