--- a/discografia.htm
+++ b/discografia.htm
@@ -6,9 +6,9 @@
     <title>Discografía – 1ª KOMUNION</title>
     <link rel="stylesheet" href="estilos-int.css">
   </head>
-  <body> <!-- Logo que SIEMPRE vuelve a index.htm -->
+  <body>
+    <!-- Logo que SIEMPRE vuelve a index.htm -->
     <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
-
           alt="1ª KOMUNION"> </a> </header>
     <!-- Menú horizontal entre líneas moradas -->
     <nav class="nav-principal">
@@ -17,18 +17,14 @@
         <li><a href="biografia.htm">Biografía</a></li>
         <li><a href="discografia.htm" class="active">Discografía</a></li>
         <li><a href="imagenes.htm">Imágenes</a></li>
+        <li><a href="letras.htm">Audios</a></li>
         <li><a href="videos.htm">Vídeos</a></li>
         <li><a href="prensa.htm">Prensa</a></li>
-        <li><a href="letras.htm">Letras</a></li>
         <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
       </ul>
     </nav>
-
-/* estilos-int.css */
-.nav-principal .active {          /* ya existente */
-    background: #ac40f8;
-    color: #ffea00;
-
+    /* estilos-int.css */ .nav-principal .active { /* ya existente */
+    background: #ac40f8; color: #ffea00;
     <!-- Contenido de la discografía -->
     <main class="contenido discografia">
       <h1>Discografía</h1>
@@ -67,7 +63,6 @@
       <section class="disco">
         <h2>Resurrekción</h2>
         <a target="_blank" href="imagenes/dvd600.jpg"> <img src="imagenes/dvd150.jpg"
-
             alt="DVD Resurrección"> </a>
         <p> Dvd grabado el 30 de agosto de 2008 durante el XIII Bestialc en
           L'Alcora.<br>
@@ -106,7 +101,6 @@
       <section class="disco">
         <h2>1ª Komunión (LP)</h2>
         <a target="_blank" href="imagenes/1komunion1.jpg"> <img src="imagenes/_1_komunion1.jpg"
-
             alt="Portada LP"> </a> <a target="_blank" href="imagenes/1komunion2.jpg">
           <img src="imagenes/_1_komunion2.jpg" alt="Contraportada LP"> </a>
         <p> Grabado en marzo de 1991 en «Polka», estudio de Alejandro Cardá
