--- a/inicio.htm
+++ b/inicio.htm
@@ -23,7 +23,6 @@
   </head>
   <body>
     <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
-
           alt="1ª KOMUNION"> </a> </header>
     <nav class="nav-principal">
       <ul>
@@ -31,9 +30,9 @@
         <li><a href="biografia.htm">Biografía</a></li>
         <li><a href="discografia.htm">Discografía</a></li>
         <li><a href="imagenes.htm">Imágenes</a></li>
+        <li><a href="letras.htm">Audios</a></li>
         <li><a href="videos.htm">Vídeos</a></li>
         <li><a href="prensa.htm">Prensa</a></li>
-        <li><a href="letras.htm">Letras</a></li>
         <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
       </ul>
     </nav>
