--- a/videos.htm
+++ b/videos.htm
@@ -3,34 +3,28 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Vídeos – 1ª KOMUNION</title>
+    <title>Prensa – 1ª KOMUNION</title>
     <link rel="stylesheet" href="estilos-int.css">
   </head>
   <body>
+    <!-- Logo que SIEMPRE vuelve a index.htm -->
     <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
           alt="1ª KOMUNION"> </a> </header>
+    <!-- Menú horizontal entre líneas moradas -->
     <nav class="nav-principal">
       <ul>
         <li><a href="inicio.htm">Inicio</a></li>
         <li><a href="biografia.htm">Biografía</a></li>
         <li><a href="discografia.htm">Discografía</a></li>
         <li><a href="imagenes.htm">Imágenes</a></li>
+        <li><a href="letras.htm">Audios</a></li>
         <li><a href="videos.htm" class="active">Vídeos</a></li>
         <li><a href="prensa.htm">Prensa</a></li>
-        <li><a href="letras.htm">Letras</a></li>
         <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
       </ul>
     </nav>
-
-/* estilos-int.css */
-.nav-principal .active {          /* ya existente */
-    background: #ac40f8;
-    color: #ffea00;
-
-    <main class="contenido">
-      <div class="video-wrapper"> <iframe src="https://www.youtube.com/embed/videoseries?list=PL994A556DBE59DD23&amp;hl=es_ES"
-          allowfullscreen="" height="360" frameborder="0" width="640"> </iframe>
-      </div>
-    </main>
+    <div class="video-wrapper"> <iframe src="https://www.youtube.com/embed/videoseries?list=PL994A556DBE59DD23&amp;hl=es_ES"
+        allowfullscreen="" height="360" frameborder="0" width="640"> </iframe>
+    </div>
   </body>
 </html>
