--- a/biografia.htm
+++ b/biografia.htm
@@ -12,22 +12,19 @@
           src="imagenes/texto%20logo1.gif" alt="1ª KOMUNION"> </a> </header>
     <nav class="nav-principal">
       <ul>
-       <li><a href="inicio.htm">Inicio</a></li>
+         <li><a href="inicio.htm">Inicio</a></li>
         <li><a href="biografia.htm" class="active">Biografía</a></li>
         <li><a href="discografia.htm">Discografía</a></li>
         <li><a href="imagenes.htm">Imágenes</a></li>
+        <li><a href="letras.htm">Audios</a></li>
         <li><a href="videos.htm">Vídeos</a></li>
         <li><a href="prensa.htm">Prensa</a></li>
-        <li><a href="letras.htm">Letras</a></li>
         <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
       </ul>
     </nav>
-
-/* estilos-int.css */
-.nav-principal .active {          /* ya existente */
-    background: #ac40f8;
-    color: #ffea00;
-
+    /* estilos-int.css */
+    .nav-principal .active { /* ya existente */ background: #ac40f8; color:
+    #ffea00;
     <main class="contenido">
       <!-- aquí tu texto de biografía -->
       <main class="contenido">
@@ -99,7 +96,6 @@
 
               height="240" width="320"> </a></p>
       </main>
-      <a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank">
-      </a></main>
+      <a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"> </a></main>
   </body>
 </html>
