--- a/biografia.htm
+++ b/biografia.htm
@@ -6,13 +6,11 @@
     <title>Biografía – 1ª KOMUNION</title>
     <link rel="stylesheet" href="estilos-int.css">
   </head>
-  <body>
-    <header class="cabecera"> <a href="index.htm" class="logo"> <img
-
-          src="imagenes/texto%20logo1.gif" alt="1ª KOMUNION"> </a> </header>
+  <body><a href="index.htm" class="logo"><img src="imagenes/texto%20logo1.gif" alt="1ª KOMUNION">
+    </a>
     <nav class="nav-principal">
       <ul>
-         <li><a href="inicio.htm">Inicio</a></li>
+        <li><a href="inicio.htm">Inicio</a></li>
         <li><a href="biografia.htm" class="active">Biografía</a></li>
         <li><a href="discografia.htm">Discografía</a></li>
         <li><a href="imagenes.htm">Imágenes</a></li>
@@ -22,14 +20,9 @@
         <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
       </ul>
     </nav>
-    /* estilos-int.css */
-    .nav-principal .active { /* ya existente */ background: #ac40f8; color:
-    #ffea00;
+    <img src="imagenes/grupo1a.jpg" alt="Grupo 1ª Komunión" class="bio-img">
     <main class="contenido">
-      <!-- aquí tu texto de biografía -->
       <main class="contenido">
-        <h1>Biografía</h1>
-        <img src="imagenes/grupo1a.jpg" alt="Grupo 1ª Komunión" class="bio-img">
         <p>Corría el año 1988 e internet era prácticamente un pensamiento
           futurista. Me refiero exactamente, que menos el fútbol de 2ª regional
           y las veladas pugilísticas de Estudio 17 (no te digo na´) todo lo
@@ -92,8 +85,7 @@
         <p class="center rojo">Así que de momento y mientras nos quede un atisbo
           de ganas de pasarlo bien...</p>
         <p class="center"> <a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank">
-            <img src="imagenes/foto%20oficial%20[320x200].gif" alt="Foto oficial"
-
+            <img src="imagenes/foto%20oficial%20[320x200].gif" alt="Foto oficial"
               height="240" width="320"> </a></p>
       </main>
       <a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"> </a></main>
