--- a/discografia.htm
+++ b/discografia.htm
@@ -295,9 +295,8 @@
       <hr>
       <section class="disco">
         <h2>&nbsp;El Gallinero Eléctrico Uno</h2>
-        <a href="imagenes/gallinero1.jpg" target="_blank"><img src="file:///C:/Users/1akom/Desktop/web%20kom%20-%20copia/imagenes/_gallinero1.jpg"
-            alt=""></a><a href="imagenes/gallinero2.jpg" target="_blank"><img src="file:///C:/Users/1akom/Desktop/web%20kom%20-%20copia/imagenes/_gallinero2.jpg"
-            alt=""></a><br>
+        <a href="imagenes/gallinero1.jpg" target="_blank"><img src="imagenes/_gallinero1.jpg"></a><a
+          href="imagenes/gallinero2.jpg" target="_blank"><img src="imagenes/_gallinero2.jpg"></a><br>
         Recopilatorio en formato single, en el cual grabaron aparte de nosotros:
         Dorados Graueros, The Joke y Tom Bombadil.<br>
         <br>
